[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-lc-rs = "1.8.0"
aws-sdk-cloudwatch = "1.48.0"
aws-sdk-s3 = "1.38.0"
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.38.0", features = ["full"] }

[[bin]]
name = "generate_upload_data"

[[bin]]
name = "get_statistics_per_function"
